services/weave-gitops/0.11.0/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weave-gitops-ingress
  namespace: ${releaseNamespace}
  annotations:
    kubernetes.io/ingress.class: kommander-traefik
    traefik.ingress.kubernetes.io/router.middlewares: "kommander-flux-stripprefixesweave@kubernetescrd"
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
  - http:
      paths:
      - backend:
          service: 
            name: weave-gitops-weave-gitops
            port:
              number: 80
        path: /weavegitops
        pathType: Prefix
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: stripprefixesweave
  namespace: kommander-flux
spec:
  stripPrefix:
    prefixes:
    - /weavegitops
